--- a/style.css
+++ b/style.css
@@ -43,6 +43,13 @@ margin-left:10vw;
 body{
     background-color:#625E5E;
 }
+#gameBox{
+    height:50vh;
+    width:100%;
+    border-style:solid;
+    border-width:1px;
+    border-color:black;
+}
 
 
 
